--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="chess.css"/>
-<script src="chess.js" charset="utf-8"></script>
+<script src="board-games.js"></script>
+<script src="chess.js"></script>
 <style>
 </style>
 </head>
@@ -11,7 +12,7 @@
 <h1>Chess</h1>
 
 <div>
-  <table>
+  <table style='-moz-user-select: none;-webkit-user-select: none;' onselectstart='return false;'>
     <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
     <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
     <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
