--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="chess.css"/>
-<script src="common.js"></script>
 <script src="board-games.js"></script>
 <script src="chess.js"></script>
+<script src="comms.js"></script>
 <style>
 </style>
 </head>
